--- a/src/components/estilos.css
+++ b/src/components/estilos.css
@@ -1,3 +1,7 @@
+
+
+
+
 .lista {
     display: flex;
     flex-wrap: wrap;
@@ -20,7 +24,7 @@
 
   }
 
-  .btn{
+  #a{
     background-color: #007bff;
     color: #fff;
     border: none;
@@ -28,6 +32,15 @@
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
+    margin: 20px;
     
+
   }
 
+
+  #b{
+    align-items: center;
+    display: grid;
+    margin-left: 100px;
+    margin-right: 100px;
+  }
